--- a/colors.css
+++ b/colors.css
@@ -5,3 +5,15 @@
 .white-color {
   color: #fffafa;
 }
+
+.aqua-color {
+  color: #00cfff;
+}
+
+.red-color {
+  color: #ff6c76;
+}
+
+.purple-color {
+  color: #25186c;
+}
